# conduit

./: .gitignore  README.md  checkpoint.html  final_pseudocode.cpp  index.html  params.json  proposal.html  report.html
src/: CMakeLists.txt  FindOculus.cmake  contracts.h  main.cpp  settings.hpp
src/buildtest/: buildtest.cu  buildtest.h  buildtest_main.cpp  make.sh
src/oculus2/: oculus2.cpp  oculus2.hpp
src/optimizer/: optimizer.cpp  optimizer.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/rendertest/: rendertest.cpp  rendertest.hpp
src/timer/: timer.hpp
src/util/: cudautil.cu  cudautil.hpp  cylinderwarp.cpp  cylinderwarp.hpp  imageutil.cpp  imageutil.hpp  timer.hpp  work_pq.h  workqueue.h
src/videoreader/: videoreader.cpp  videoreader.hpp
stylesheets/: stylesheet.css
